--- a/package.json
+++ b/package.json
@@ -17,8 +17,20 @@
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/eslintrc": "^3",
+    "@storybook/addon-a11y": "^9.1.8",
+    "@storybook/addon-docs": "^9.1.8",
+    "@storybook/addon-onboarding": "^9.1.8",
+    "@storybook/addon-vitest": "^9.1.8",
+    "@storybook/nextjs-vite": "^9.1.8",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4"
+    "eslint-config-next": "15.5.4",
+    "eslint-plugin-storybook": "^9.1.8",
+    "playwright": "^1.55.1",
+    "storybook": "^9.1.8",
+    "vitest": "^3.2.4"
   }
 }
